objects/Obstacle__c.object
<CustomObject>
    <description>To store obstacles identified in client action plans, highlighting challenges that may impede progress towards goals.</description>
    <fields>
        <fullName>ClientActionPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Action Plan</label>
        <referenceTo>ClientActionPlan__c</referenceTo>
        <relationshipLabel>Obstacles</relationshipLabel>
        <relationshipName>Obstacles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Obstacles</relationshipLabel>
        <relationshipName>Obstacles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Obstacles</relationshipLabel>
        <relationshipName>Obstacles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ObstacleDetails__c</fullName>
        <label>Obstacle Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObstacleSubject__c</fullName>
        <label>Obstacle Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObstaclesDefaultValues__c</fullName>
        <label>Obstacles Default Values</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lack of opportunity</fullName>
                </value>
                <value>
                    <fullName>Lack of required skills</fullName>
                </value>
                <value>
                    <fullName>Lack of access to financial resources</fullName>
                </value>
                <value>
                    <fullName>Lack of familial support</fullName>
                </value>
                <value>
                    <fullName>Lack of time</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Obstacle</label>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>Obstacles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obstacles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>